@@ -375,7 +375,6 @@ MANPAGES_ALIAS += \
 	man/sd_bus_error_set_errnof.3 \
 	man/sd_bus_message_append_array_iovec.3 \
 	man/sd_bus_message_append_array_space.3 \
-	man/sd_bus_message_get_realtime_usec.3 \
 	man/sd_bus_message_get_reply_cookie.3 \
 	man/sd_bus_message_get_seqnum.3 \
 	man/sd_bus_negotiate_creds.3 \
@@ -432,7 +431,6 @@ man/sd_bus_error_set_errno.3: man/sd_bus_error.3
 man/sd_bus_error_set_errnof.3: man/sd_bus_error.3
 man/sd_bus_message_append_array_iovec.3: man/sd_bus_message_append_array.3
 man/sd_bus_message_append_array_space.3: man/sd_bus_message_append_array.3
-man/sd_bus_message_get_realtime_usec.3: man/sd_bus_message_get_monotonic_usec.3
 man/sd_bus_message_get_reply_cookie.3: man/sd_bus_message_get_cookie.3
 man/sd_bus_message_get_seqnum.3: man/sd_bus_message_get_monotonic_usec.3
 man/sd_bus_negotiate_creds.3: man/sd_bus_negotiate_fds.3
@@ -565,9 +563,6 @@ man/sd_bus_message_append_array_iovec.html: man/sd_bus_message_append_array.html
 	$(html-alias)
 
 man/sd_bus_message_append_array_space.html: man/sd_bus_message_append_array.html
-	$(html-alias)
-
-man/sd_bus_message_get_realtime_usec.html: man/sd_bus_message_get_monotonic_usec.html
 	$(html-alias)
 
 man/sd_bus_message_get_reply_cookie.html: man/sd_bus_message_get_cookie.html
