@@ -44,7 +44,6 @@
 
         <refnamediv>
                 <refname>sd_bus_message_get_monotonic_usec</refname>
-                <refname>sd_bus_message_get_realtime_usec</refname>
                 <refname>sd_bus_message_get_seqnum</refname>
                 <refpurpose>Retrieve the sender timestamps and sequence number of a message</refpurpose>
         </refnamediv>
@@ -55,12 +54,6 @@
 
                         <funcprototype>
                                 <funcdef>int <function>sd_bus_message_get_monotonic_usec</function></funcdef>
-                                <paramdef>sd_bus_message *<parameter>message</parameter></paramdef>
-                                <paramdef>uint64_t *<parameter>usec</parameter></paramdef>
-                        </funcprototype>
-
-                        <funcprototype>
-                                <funcdef>int <function>sd_bus_message_get_realtime_usec</function></funcdef>
                                 <paramdef>sd_bus_message *<parameter>message</parameter></paramdef>
                                 <paramdef>uint64_t *<parameter>usec</parameter></paramdef>
                         </funcprototype>
@@ -82,13 +75,6 @@
                 the <literal>CLOCK_MONOTONIC</literal> epoch, see
                 <citerefentry><refentrytitle>clock_gettime</refentrytitle><manvolnum>2</manvolnum></citerefentry>
                 for details.</para>
-
-                <para>Similar,
-                <function>sd_bus_message_get_realtime_usec()</function>
-                returns the realtime (wallclock) timestamp of the time
-                the message was sent. This value is in microseconds
-                since Jan 1st, 1970, i.e. in the
-                <literal>CLOCK_REALTIME</literal> clock.</para>
 
                 <para><function>sd_bus_message_get_seqnum()</function>
                 returns the kernel-assigned sequence number of the
@@ -166,7 +152,6 @@
 
                 <para>The
                 <function>sd_bus_message_get_monotonic_usec()</function>,
-                <function>sd_bus_message_get_realtime_usec()</function>,
                 and <function>sd_bus_message_get_seqnum()</function>
                 interfaces are available as a shared library, which
                 can be compiled and linked to with the
